# yt-grabber

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
src/yt_grabber/: batch.py  cli.py  config.py  downloader.py  models.py  notifier.py  playlist.py  playlist_extractor.py  playlist_manager.py
src/yt_grabber/extractors/: base.py  channel.py  playlist.py
tests/unit/: test_downloader.py  test_playlist_manager.py  test_sync.py
