[project]
name = "yt-grabber"
version = "0.1.0"
description = "YouTube playlist downloader CLI tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
yt-grabber = "yt_grabber.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
